test_programs/compile_failure/noirc_frontend_tests_numeric_generic_as_unused_param_type/src/main.nr

    pub fn foo<let I: u32>(_x: I) { }
    